--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,16 @@ classifiers = [
 ]
 
 dependencies = [
-    "torch==1.13.1",
-    "torchvision==0.14.1",
-    "validators==0.18.2",
+    "datasets>=2.14.6",
+    "lightning>=1.9.5",
+    "ml-collections>=0.1.1",
     "scikit-learn>=1.3.2",
+    "selfies>=2.1.1",
+    "torch==1.13.1",
+    "torchtext>=0.16.0",
+    "torchvision==0.14.1",
     "transformers>=4.34.1",
-    "ml-collections>=0.1.1"
+    "validators==0.18.2"
 ]
 
 requires-python = ">=3.9"
