--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,9 @@ dependencies = [
     "ml-collections>=0.1.1",
     "scikit-learn>=1.3.2",
     "selfies>=2.1.1",
-    "torch==1.13.1",
+    "torch>=2.1.0",
     "torchtext>=0.16.0",
-    "torchvision==0.14.1",
+    "torchvision>=0.16.0",
     "transformers>=4.34.1",
     "validators==0.18.2"
 ]
