--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+include_package_data = true
+
 [project]
 name = "constellatio"
 version = "0.1.0"
