--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-include_package_data = true
+[tool.setuptools.package-data]
+constellatio = ["*/*.json", "*/*/*.json"]
 
 [project]
 name = "constellatio"
