--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "selfies>=2.1.1",
     "torch>=2.1.0",
+    "tqdm>=4.66.1",
     "transformers>=4.34.1",
     "validators==0.18.2"
 ]
